k8s/authapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abc-auth-app-dpl-clusterip
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: abc-auth-app-dpl
  template:
    metadata:
      labels:
        app: abc-auth-app-dpl
    spec:
      containers:
        - name: abc-auth-app-dpl
          image: shalithax/abc-auth-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4500
