k8s/authapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ctse-auth-service
spec:
  type: NodePort
  selector:
    app: ctse-auth-deployment
  ports:
    - protocol: TCP
      port: 4501
      targetPort: 4500
