k8s/payment-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ctse-payment-gateway-service
spec:
  type: NodePort
  selector:
    app: ctse-payment-gateway-deployment
  ports:
    - protocol: TCP
      port: 5101
      targetPort: 5100
