k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abc-product-depl
spec:
  selector:
    matchLabels:
      app: abc-product
  template:
    metadata:
      labels:
        app: abc-product
    spec:
      containers:
        - name: abc-product
          image: shalithax/abc_product_service
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 4501
---
apiVersion: v1
kind: Service
metadata:
  name: abc-product-service-clusterip
spec:
  selector:
    app: abc-product
  ports:
    - name: abc-product
      protocol: TCP
      port: 4501
      targetPort: 4501
