k8s/sales-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ctse-sales-service
spec:
  type: NodePort
  selector:
    app: ctse-sales-deployment
  ports:
    - protocol: TCP
      port: 7001
      targetPort: 7000
