k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ctse-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "gke-ctseapp-ip"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ctse-auth-service
                port:
                  number: 4501
